# chess-llm

backend/: main.py  pyproject.toml
backend/src/: LLMAgents.py  chessGame.py  config.py  models.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ModelSelectionModal.tsx  gameBoard.tsx
