[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "dotenv>=0.9.9",
    "fastapi>=0.127.1",
    "langchain-anthropic>=1.3.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
